// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders snapshots with shallow enzyme 1`] = `
<div
  className="App"
>
  <div
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <h2>
      Welcome to React
    </h2>
  </div>
  <p
    className="App-intro"
  >
    <UrlInput
      onChange={[Function]}
      url=""
    />
  </p>
  <div>
    <RequestBodyInput
      onChange={[Function]}
    />
  </div>
  <div>
    <button
      onClick={[Function]}
    >
      Generate Things
    </button>
  </div>
  <div
    style={
      Object {
        "border": 1,
        "padding": 5,
      }
    }
  />
</div>
`;

exports[`renders with react-test-renderer 1`] = `
<div
  className="App"
>
  <div
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <h2>
      Welcome to React
    </h2>
  </div>
  <p
    className="App-intro"
  >
    <label>
      URL
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </p>
  <div>
    <textarea
      className="App-request-body-input"
      onChange={[Function]}
      type="text"
      value={undefined}
    />
  </div>
  <div>
    <button
      onClick={[Function]}
    >
      Generate Things
    </button>
  </div>
  <div
    style={
      Object {
        "border": 1,
        "padding": 5,
      }
    }
  />
</div>
`;
